@@ -7,12 +7,9 @@ http://github.com/nco/nco (Source Code, Issues, Releases)
 
 What's new?
 Version 5.3.7 consists mainly of bugfixes:
-There is a regridder fix that prevent it from failing to work
-with some regional destination grids (global grids are not affected).
-ncclimo fixes an issue computing global timeseries from ELM/CLM data
-on unstructured grids, e.g., from "bigrid" ESM simulations. 
-Smaller fixes abound, including to the map-checker.
-Regridder should upgrade. Others may skip this release.
+ncclimo automatic name generation fixes two corner case bugs,
+
+fxm should upgrade. Others may skip this release.
 
 Enjoy,
 Charlie
@@ -27,24 +24,22 @@ ncremap.
 
 BUG FIXES:
    
-A. The map checker (ncks --chk_map) and regridder robustness check
-implemented in 5.3.5 contained a bug that affected regional
-destination grids. The bug could cause these tools to report correct
-mapfiles as invalid. This has been fixed. The solution is to upgrade
-to 5.3.7-alpha02 or downgrade to 5.3.4.
+A. In all previous versions ncclimo failed to handle
+starting and ending years specified as 0, 00, or 000.
+Year zero had to be specified as 0000. That is now fixed.
+The workaround is to use 0000 for year 0. The solution is
+to upgrade.
 
-B. The regridder now accepts 'nco_idw' and 'ncoidw' as synonyms for
-NCO's inverse-distance-weighted algorithm. 'nco_idw' was not
-recognized on some earlier versions. Thanks to Zachary Moon for
-reporting this.
-
-C. ncclimo's 5.3.5 feature to automatically detect surface fields
-did not recognized the 'lndgrid' dimension of ELM and CLM as
-indicating a horizontal spatial dimension. This prevented ncclimo
-from constructing automated spatial timeseries averages of datasets
-on native unstructured grids. That is now fixed. The workaround is
-to downgrade to version 5.3.3 and explicitly specify the desired
-fields. The solution is to upgrade.
+A. Since about 2024 the ncclimo automatic name generation
+feature has prepended "${caseid}." to the default MPAS model
+filenames. This inadvertently prepended just a period when
+the --caseid option was not specified. This period is an
+unwanted character, and broke the automatic feature from
+correctly generating MPAS v1 and v2 filenames. This has
+been fixed. The workaround is to create symbolic links
+that contain the period to the actual v1 and v2 filenames.
+The solution is to upgrade. Thanks to Qi Tang for reporting
+this issue.
 
 Full release statement at http://nco.sf.net/ANNOUNCE
     
@@ -53,7 +48,7 @@ KNOWN PROBLEMS DUE TO NCO:
 This section of ANNOUNCE reports and reminds users of the
 existence and severity of known, not yet fixed, problems. 
 These problems occur with NCO 5.3.4 built/tested under
-MacOS 15.6.1 with netCDF 4.10-development on HDF5 1.14.6
+MacOS 26.0.1 with netCDF 4.10-development on HDF5 1.14.6
 and with Linux FC42 with netCDF 4.9.2 on HDF5 1.14.4.
 
 A. NOT YET FIXED (NCO problem)
