@@ -1,8 +1,12 @@
-2025-11-06  Charlie Zender  <zender@uci.edu>
+2025-11-20  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.7-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha02: Black-eyed P\'s';git push
-	git tag -a 5.3.7-alpha02 -m '';git push --tags
+	git tag -a 5.3.7-alpha02 -m 'ncks: jsn att fmt fix';git push --tags
+
+	* Fix jsn_att_fmt regression, restore printing attributes as objects, reported by Andrew Barna
+
+2025-11-06  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.7-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha01: Reuptake Inhibitor';git push
